--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
-.components{
+.componentsCollumn{
   display: flex;
+  flex-direction: column;
+  width: 800px;
+  
+}
+.lineBox{
+  display: flex;
+  flex-direction: row;
+}
+.line{
+  border: 3px black dotted ;
+  width: 400px;
+}
+.lineC{
+  border: 3px black dotted ;
+  width: 800px;
 }
