--- a/src/components/Layout/Layouy.module.css
+++ b/src/components/Layout/Layouy.module.css
@@ -7,6 +7,16 @@
   gap: 20px;
 }
 
+.outlets {
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
+  display: flex;
+   overflow: hidden;
+  overflow-y: auto;
+  background-color: brown;
+  color: aqua;
+}
 .header a {
   font-size: 30px;
   color: aquamarine;
@@ -17,26 +27,9 @@
   text-decoration: underline;
   color: brown;
 }
-/* 
-.footer {
-  min-height: 20px;
-  background-color: black;
-  justify-content: right;
-  padding-right: 20px;
-  color: aquamarine;
-  display: flex;
-} */
-.outlet {
-  width: 95%;
-  margin: 0 auto;
-display: flex;
-  overflow: hidden;
-  overflow-y: auto;
-}
 
 .lr {
   display: flex;
   color: azure;
   background-color: darkslategray;
-  
 }
